test/spec_vectors/conversions/fail/module_18.wat
(module (func (result f32) (f32.demote_f64 (i32.const 0))))